--- a/client/src/App.css
+++ b/client/src/App.css
@@ -23,9 +23,7 @@ body {
 }
 
 .container {
-  margin: 30px auto;
   width: 350px;
-
 }
 
 h1 {
@@ -47,7 +45,7 @@ h4 {
 .inc-exp-container {
   background-color: #FFCFD2;
   box-shadow: var(--box-shadow);
-  border-radius: 15px;
+  border-radius: 9px;
   padding: 20px;
   display: flex;
   justify-content: space-between;
@@ -130,13 +128,23 @@ hr {
   box-shadow: 0 10px 25px #7b68ee80;
 }
 
+.option-btn {
+  background-color: #7b68ee;
+  box-shadow: 0 10px 25px #7b68ee80;
+  border: none;
+  padding: 6px 8px;
+  margin: 0px 10px 0px 0px;
+  border-radius: 9px;
+  color: white;
+  cursor: pointer;
+}
+
 .btn:focus,
 .btn:hover,
-.delete-btn:focus {
+.option-btn:focus,
+.option-btn:hover {
   outline: 0;
-  font-family: 'Montserrat', sans-serif;
   background-color: #5f48ea;
-  color: white;
 }
 
 .list {
@@ -147,15 +155,15 @@ hr {
 
 .list li {
   border: 2px black solid;
-  border-radius: 15px;
+  border-radius: 9px;
+  font-size: 20px;
   box-shadow: var(--box-shadow);
   display: flex;
   justify-content: space-between;
-  position: relative;
   background-color: #FFCFD2;
   padding: 15px;
+  margin-block: 10px;
   color: black;
-  margin: 10px 0;
 }
 
 .list li.plus {
@@ -166,21 +174,14 @@ hr {
   border-right: 5px solid #c0392b;
 }
 
-.delete-btn {
+.icon {
   background-color: transparent;
   border: none;
-  padding: 0px 10px 0px 0px;
-  margin: 0px;
-  transition-duration: 20ms;
+  width: 15px;
+  margin-right: 10px;
 }
 
-.delete-btn:hover, .delete-btn:focus {
-  text-decoration: underline;
-  background-color: transparent;
-  color: black;
-}
-
-.list li:hover .delete-btn {
+.list li:hover {
   opacity: 1;
 }
 
